[tool.poetry]
name = "classroom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
openai = "^0.25.0"
python-dotenv = "^0.21.0"
jupyter-kernel-gateway = "^2.5.2"
sqlalchemy = "^2.0.27"
replicate = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
